[gd_scene load_steps=8 format=3 uid="uid://du7c6r7mtk6kd"]

[ext_resource type="PackedScene" uid="uid://dbdvionic7wca" path="res://scenes/larva.tscn" id="1_o5rni"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_vaohc"]
[ext_resource type="Texture2D" uid="uid://b5yfd6brx3i87" path="res://media/images/background.png" id="4_bg3t1"]
[ext_resource type="PackedScene" uid="uid://b65n6le07qogs" path="res://scenes/hud.tscn" id="4_xc144"]
[ext_resource type="AudioStream" uid="uid://20atgyccelpn" path="res://media/music/happy-carnival.ogg" id="5_g0j15"]
[ext_resource type="PackedScene" uid="uid://dfil1fat2xdr8" path="res://scenes/food.tscn" id="6_7qtwb"]

[sub_resource type="Curve2D" id="Curve2D_pxidl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -768, 528, 0, 0, 0, 0, 1542, 528)
}
point_count = 2

[node name="main" type="Node"]
script = ExtResource("1_vaohc")
foodScene = ExtResource("6_7qtwb")

[node name="larva" parent="." instance=ExtResource("1_o5rni")]
position = Vector2(201, 549)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(260, 552)

[node name="background" type="ParallaxBackground" parent="."]

[node name="backgroundLayout" type="ColorRect" parent="background"]
offset_right = 480.0
offset_bottom = 720.0
color = Color(0.239216, 0.27451, 0.188235, 1)

[node name="groundLayer" type="ParallaxLayer" parent="background"]

[node name="bg1" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(131, 620)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")

[node name="bg2" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(645, 620)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")

[node name="bg3" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(388, 620)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")
flip_h = true

[node name="bg4" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(901.544, 619.5)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")
flip_h = true

[node name="bg5" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(1416.54, 619.5)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")
flip_h = true

[node name="bg6" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(1159.54, 619.5)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")

[node name="bg7" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(-639.456, 619.5)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")
flip_h = true

[node name="bg8" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(-126, 619.5)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")
flip_h = true

[node name="bg9" type="Sprite2D" parent="background/groundLayer"]
position = Vector2(-382.456, 619.5)
scale = Vector2(0.309, 1)
texture = ExtResource("4_bg3t1")

[node name="hud" parent="." instance=ExtResource("4_xc144")]

[node name="backgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g0j15")

[node name="foodTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="foodPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_pxidl")

[node name="foodSpawnLocation" type="PathFollow2D" parent="foodPath"]
position = Vector2(-768, 528)

[connection signal="grabbed" from="larva" to="." method="_on_larva_grabbed"]
[connection signal="moved" from="larva" to="." method="_on_larva_moved"]
[connection signal="timeout" from="foodTimer" to="." method="_on_food_timer_timeout"]
